@@ -104,7 +104,7 @@
     </div>
 </div>
 
-<ws-modal *ngIf="isBannersOpened" [isCloseIconDisplayed]="false" [(isOpened)]="isBannersOpened" [maxWidth]="600">
+<ws-modal *ngIf="isBannersOpened" [isCloseIconDisplayed]="true" [(isOpened)]="isBannersOpened" [maxWidth]="600">
     <div class="pt-3" modalBody>
         <div class="ws-circle-button">
             <button class="btn btn-controller small" title="Upload"
@@ -176,7 +176,7 @@
         </div>
     </div>
 </ws-modal>
-<ws-modal *ngIf="isMenuImagesOpened" [isCloseIconDisplayed]="false" [(isOpened)]="isMenuImagesOpened" [maxWidth]="600">
+<ws-modal *ngIf="isMenuImagesOpened" [isCloseIconDisplayed]="true" [(isOpened)]="isMenuImagesOpened" [maxWidth]="600">
     <div class="pt-3" modalBody>
         <div class="ws-circle-button">
             <button class="btn btn-controller small" title="Upload"
