@@ -16,9 +16,9 @@
   </div>
 </div> -->
 <div class="modal">
-  <div id="{{id}}" class="modal-wrap">
+  <div id="{{id}}" class="modal-wrap" (click)="closeOutside($event)">
       <div class="modal-body">
-          <div class="modal-body-content" [style.max-width.px]="maxWidth">
+          <div class="modal-body-content" #wsModalBody [style.max-width.px]="maxWidth">
               <div class="px-lg-5 px-3 py-4 modal-content">
                   <div class="modal-close">
                     <span *ngIf="isCloseIconDisplayed" class="fas fa-times" (click)="close()"></span>
