@@ -28,6 +28,7 @@
       border-radius: 4px;
       transition: background-color ease .1s;
       cursor: pointer;
+      color: #505f79;
 
       &:hover {
         background-color: rgba(0, 0, 0, .15) !important;
